# ros_project2

./: README.md
auxiliary_code_backup/ai_training_xai/dataset_tools/: augmentation_README.md
auxiliary_code_backup/ai_training_xai/object_training/: README.md
auxiliary_code_backup/manipulation_teaching/: manipulation_notes.md  manipulator_architecture.md  robot_motion_physics.md
auxiliary_code_backup/network_connectivity/: README.md
docs/: AUXILIARY.md  CODEBASE.md  HARDWARE.md  JETSON_LOG_PATHS.md  LOGGING.md  MISSION.md  NETWORK.md  POSE_ESTIMATION_LIDAR_ISSUE_2026-06-16.md  RUN_MISSION.md
docs/issues/: HARDWARE_TROUBLESHOOTING.md  KNOWN_PATH_ISSUES.md  LIDAR_POSE_ESTIMATION_2026-06-16.md
turtlebot3_ws/scripts/: safety_control.sh  start_bridge_quicktunnel.sh  start_mission_tmux.sh  stop_mission_tmux.sh
turtlebot3_ws/src/camera_ros/: package.xml  setup.py
turtlebot3_ws/src/item_detector/: package.xml  setup.py
turtlebot3_ws/src/manipulator/: package.xml  setup.py
turtlebot3_ws/src/manipulator/launch/: manipulatorCtrl.launch.py  manipulatorGUI.launch.py
turtlebot3_ws/src/mediapipe_hand_tracker/: package.xml  setup.py
turtlebot3_ws/src/mediapipe_hand_tracker/mediapipe_hand_tracker/: hand_tracker_node.py
turtlebot3_ws/src/rtreebot/: package.xml  setup.py
turtlebot3_ws/src/rtreebot/rtreebot/: delivery_ctrl.py
turtlebot3_ws/src/turtlebot3/: README.md
turtlebot3_ws/src/turtlebot3/turtlebot3/: package.xml
turtlebot3_ws/src/turtlebot3_msgs/: README.md
web_client/: README.md
(+3 files in other folders)
