<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mediapipe_hand_tracker</name>
  <version>0.0.0</version>
  <description>MediaPipe hand gesture node for delivery-mode manipulator motions</description>
  <maintainer email="rtree-mission@example.invalid">Rtree Mission Team</maintainer>
  <license>LicenseRef-Portfolio-Demo</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
